@@ -1,6 +1,7 @@
 xine-lib (1.1.16) 2008-??-??
   * Security fixes:
     - Integer overflows in the ffmpeg audio decoder and the CDDA server.
+    - Heap buffer overflow in the ffmpeg video decoder.
   * Fix reported compilation failures (with C++ programs).
   * Fix CDDB access in 64-bit builds.
 
